--- a/css/super-search.css
+++ b/css/super-search.css
@@ -14,11 +14,6 @@ MIT Licensed
 
 .super-search {
 	position: fixed;
-	//background-color: rgba(0, 191, 255, 0.85);
-	//background-color: rgba(255,255,255,0.5);
-	//background-color : transparent;
-	//background-color: inherit;// * rgba(255,255,255,0.9);
-	//background: alpha(.5);
 	background-color: rgba(0,137,123,0.6);
 	left: 0;
 	right: 0;
@@ -44,7 +39,7 @@ MIT Licensed
 	color: #999;
 	width: 100%;
 	padding: 10px 31px;
-	text-align: center;
+	text-align: left;
 	transform: translateY(-100%);
 	transition: 0.15s ease-out 150ms;
 }
